# GitHub-Card-Generator

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .gcloudignore  Dockerfile  README.md  agent.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  test_mcp.py
backend/static/cards/: KingInTheArea.html  UTTKARSHCODER.html  YOGESHMAHENSAR.html  prince8094.html  rakshitvermagithub.html  torvalds.html
frontend/: Dockerfile  index.html
