[project]
name = "github-card-generator-backend"
version = "0.1.0"
description = "Backend for GitHub Dev Card Generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "mcp[cli]",
    "google-adk",
    "google-generativeai",
    "python-dotenv",
    "httpx",
    "jinja2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
